@@ -230,7 +230,7 @@ class AddressRuleContainer extends ObjRuleContainer
             DH::Hosts_to_xmlDom($this->xmlroot, $this->o, 'member', true);
     }
 
-    public function &toString_inline()
+    public function toString_inline()
     {
         if( count($this->o) == 0 )
         {
