@@ -5,7 +5,8 @@ CHANGELOG
 * major performance improvment when loading a configuration (added 'name to objects' indexes for fast searches)
 * renamed address query filter "value eq" to "value string.eq" for string comparison
 * new address query filters "value ip4.match.exact"
-* rule-edit.php : improved zone calculation feature by allowing to load an external firewall
+* rules-edit.php : improved zone calculation feature by allowing to load an external firewall
+* rules-edit.php : new action 'exportCSV'
 
 bugfixes:
 * NatRule source nat hosts and types were incorrectly implemented
